# RH-P12-RN-A

rh_p12_rn_a_description/urdf/: inertia_tensors.urdf.xacro  rh_p12_rn_a.gazebo  rh_p12_rn_a.xacro
rh_p12_rn_a_manager/config/: RH-P12-RN(A).robot
rh_p12_rn_a_manager/launch/: rh_p12_rn_a_manager.launch
rh_p12_rn_a_tools/: CMakeLists.txt  package.xml
rh_p12_rn_a_tools/launch/: bringup.launch  test.launch
rh_p12_rn_a_tools/scripts/: gripper_action_server.py
rh_p12_rn_a_tools/src/: rh_p12_rn_a_joint_state_pub_node.cpp
