<?xml version="1.0"?>
<package format="2">
  <name>rh_p12_rn_a_tools</name>
  <version>0.1.0</version>
  <description>
    Tools package using ROBOTIS framework to control the RH-P12-RN(A)
  </description>
  <license>BSD</license>
  <author email="david.dudas@outlook.com">David Dudas</author>
  <maintainer email="david.dudas@outlook.com">David Dudas</maintainer>
  <url type="website">http://wiki.ros.org/rh_p12_rn_a_manager</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/rh_p12_rna/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/RH-P12-RN-A</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/RH-P12-RN-A/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
